cloud/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cloudpresi
spec:
  containers:
  - name: cloudpresei
    image: skonair/cloudpresi:latest
    ports:
    - containerPort: 8080
